paid unpaid internship

--- a/groupprojectadmir.Rmd
+++ b/groupprojectadmir.Rmd
@@ -13,17 +13,7 @@ library(tidyverse)
 source('conn.R')
 ```
 
-```{r}
 
-
-collect(inter) -> ii
-  
-internPaid <- tbl(conStudent, 'internship') %>% select(graduationId,jobTitle,internshipPaid) %>% 
-  filter(intershipPaid != 'No')
-
-internNotPaid <- tbl(conStudent, 'internship') %>% select(graduationId,jobTitle,internshipPaid) %>% 
-  filter(intershipPaid == "No")
-```
 
 ```{r}
 tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid) %>% 
@@ -39,4 +29,12 @@ tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% se
 tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid))
 ```
+
+```{r}
+tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
+  filter(!is.na(internshipPaid)) %>% collect() %>% 
+  ggplot()+
+  geom_col(aes(internshipPaid, n))
+```
+
 
