--- a/StudentInternships.Rmd
+++ b/StudentInternships.Rmd
@@ -1,11 +1,3 @@
----
-title: "Interns"
-author: "Inchan Kim"
-date: "4/9/2018"
-output: html_document
----
-
-```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 conStudent <- src_mysql(host = "ba-isdsclass-programdev.lsu.edu",
@@ -13,16 +5,17 @@ conStudent <- src_mysql(host = "ba-isdsclass-programdev.lsu.edu",
                         user = 'student',
                         password = 'student',
                         dbname = "isds_3105")
-```
 
 
-```{r}
+
+
 internship <- tbl(conStudent, 'internship')
 graduation <- tbl(conStudent, 'graduation')
 
-right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% count(graduationId, interns) %>% mutate(interns = interns*n) %>% select(graduationId, interns)
+right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>%
+  select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>%
+  count(graduationId, interns) %>% mutate(interns = interns*n) %>% select(graduationId, interns) -> x
 
-
-
-```
+right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>%
+  select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% count(interns)
 
