--- a/StudentInternships.Rmd
+++ b/StudentInternships.Rmd
@@ -1,10 +1,7 @@
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-conStudent <- src_mysql(host = "ba-isdsclass-programdev.lsu.edu",
-                        port = 3306,
-                        user = 'student',
-                        password = 'student',
-                        dbname = "isds_3105")
+source("conn.R")
+
 
 
 
