--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -6,7 +6,8 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, message = F)
+library(tinytex)
 ```
 
 #Intro
@@ -23,3 +24,15 @@ Our team wanted to know how an LSU graduate's past internships affect their sala
 
 
 ###How LSU Graduates Stack Up
+```{r}
+source('salaryBrackets.R')
+```
+
+To put everything in perspective, we wanted to compare the starting salaries of LSU graduates to that of the average college graduate in the US. To do this, we used a dataset from *The Wall Street Journal* (WSJ) that included the median starting salaries of college graduates by major: http://online.wsj.com/public/resources/documents/info-Degrees_that_Pay_you_Back-sort.html.  
+Of the `r nrow(kaggle)` majors listed in the WSJ dataset, only `r nrow(kaggle) - nrow(notIn)` matched up with the majors of the LSU graduates who went into the workforce after graduation. Some of the major names had to be adjusted to match up properly to the WSJ dataset.  
+
+
+```{r}
+salaryPlot
+```
+
