--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -8,6 +8,13 @@ output: pdf_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = F)
 library(tinytex)
+library(tidyverse)
+library(knitr)
+library(DBI)
+library(scales)
+
+source("conn.R")
+source("salaryBrackets.R")
 ```
 
 #Intro
@@ -18,16 +25,51 @@ Our team wanted to know how an LSU graduate's past internships affect their sala
 
 
 ###Paid or Unpaid Internships
+```{r}
+paid<- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,internshipPaid)
+paid
 
+total<- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
+  filter(!is.na(internshipPaid))
+total
+```
+As we have stated previously, of all of the LSU graduates from 2017, `r count(internship)` had internships while completing their degree.  
+
+From this number there is a total of 2240 `r count(paid$internshipPaid) %>% groupby(paid$internshipPaid == 'no')` unpaid internships, and 5440 paid internships taken by students that graduated in 2017.  
+
+In the analysis we will find out about the correlation between paid and unpaid internship on the sallary that the graduated student.  
+```{r}
+paidcol <- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
+  filter(!is.na(internshipPaid)) %>% collect() %>% 
+  ggplot()+
+  geom_col(aes(internshipPaid, n))
+paidcol
+```
+####Analysis
+
+```{r}
+kk <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% select(salaryBracket, internshipPaid) %>% count(salaryBracket, internshipPaid)%>% mutate(percentage = round(n/2600, digits = 3))
+
+```
+From the dataset we found out that: `r sum(kk$n)`     `r sum(kk$percentage)`
+
+-43 `r kk[1,3]` graduates with unpaid internships, and 834 `r kk[2,3]` graduates with paid internships got high starting salaries.
+
+-242 `r kk[5,3]` graduates with unpaid internship, and 1055 `r kk[6,3]` graduates with paid internship got medium starting salaries.
+
+-158 `r kk[3,3]` graduates with unpaid internship, and 268 `r kk[4,3]` graduates with paid internship got low starting salaries.
+
+```{r}
+paidbar <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% 
+  ggplot() + geom_bar(aes(x = salaryBracket, fill = internshipPaid), position = "dodge")
+paidbar
+```
+Based on data and graph above we can coclude that paid internship have highly positive correlation on starting salary with the highest percentage of `r kk[6,4]` for medium starting salary, and second highest of "bla percent" for high starting salary.  
 
 ###Employer Loyalty
 
 
 ###How LSU Graduates Stack Up
-```{r}
-source('salaryBrackets.R')
-```
-
 To put everything in perspective, we wanted to compare the starting salaries of LSU graduates to that of the average college graduate in the US. To do this, we used a dataset from *The Wall Street Journal* (WSJ) that included the median starting salaries of college graduates by major: http://online.wsj.com/public/resources/documents/info-Degrees_that_Pay_you_Back-sort.html.  
 Of the `r nrow(kaggle)` majors listed in the WSJ dataset, only `r nrow(kaggle) - nrow(notIn)` matched up with the majors of the LSU graduates who went into the workforce after graduation. Some of the major names had to be adjusted to match up properly to the WSJ dataset.  
 
