--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -32,10 +32,13 @@ paid
 total<- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid))
 total
+
+tn <- total %>% filter(internshipPaid== "no")
+ty <- total %>% filter(internshipPaid== "yes")
 ```
 As we have stated previously, of all of the LSU graduates from 2017, `r count(internship)` had internships while completing their degree.  
 
-From this number there is a total of 2240 `r count(paid$internshipPaid == 'no')` unpaid internships, and 5440 paid internships taken by students that graduated in 2017.  
+From this number there is a total of `r tn$n`unpaid internships, and `r ty$n`5440 paid internships taken by students that graduated in 2017.  
 
 In this analysis we will find out about the correlation between paid and unpaid internship on the starting salaries for graduated students in 2017.  
 ```{r}
@@ -44,6 +47,8 @@ paidcol <- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduatio
   ggplot()+
   geom_col(aes(internshipPaid, n))
 paidcol
+
+
 ```
 ####Analysis
 
@@ -51,7 +56,7 @@ paidcol
 kk <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% select(salaryBracket, internshipPaid) %>% count(salaryBracket, internshipPaid)%>% mutate(percentage = round(n/2600, digits = 3))
 
 ```
-From the dataset we found out that `r sum(kk$n)` get a job right after graduation. THe distribution based on the salary bracket is :
+From the dataset we found out that `r sum(kk$n)` get a job right after graduation. The distribution based on the salary bracket is :
 
 -`r kk[1,3]` graduates with unpaid internships, and `r kk[2,3]` graduates with paid internships got high starting salaries.
 
