--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -14,7 +14,7 @@ library(DBI)
 library(scales)
 
 source("conn.R")
-#source("salaryBrackets.R")
+source("salaryBrackets.R")
 ```
 
 #Intro
@@ -26,39 +26,28 @@ Our team wanted to know how an LSU graduate's past internships affect their sala
 
 ###Paid or Unpaid Internships
 ```{r}
-
-
 graduat <- tbl(conStudent,'graduation')
 graduat1 <- as_data_frame(graduat)
-
-graduat1
 
 intern <- tbl(conStudent,'internship')
 intern1 <- as_data_frame(intern)
 
-
 oo <- intern1 %>% inner_join(graduat1) %>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid))
 
-oo[1,2]
-
-
-
 paid<- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,internshipPaid)
-paid
 
 total<- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid))
-total
 
 internshipP <- paid %>% collect() 
 
 tn <- oo %>% filter(internshipPaid== "no")
 ty <- oo %>% filter(internshipPaid== "yes")
 ```
-As we have stated previously, of all of the LSU graduates from 2017, `r count(paid)` had internships while completing their degree.  
+As we have stated previously, of all of the LSU graduates from 2017, `r length(unique(intern1$graduationId))` had internships while completing their degree.  
 
-From this number there is a total of `r oo[1,2]`unpaid internships, and `r oo[2,2]`5440 paid internships taken by students that graduated in 2017.  
+From this number there is a total of `r oo[1,2]` unpaid internships, and `r oo[2,2]` 5440 paid internships taken by students that graduated in 2017.  
 
 In this analysis we will find out about the correlation between paid and unpaid internship on the starting salaries for graduated students in 2017.  
 ```{r}
@@ -67,26 +56,20 @@ paidcol <- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduatio
   ggplot()+
   geom_col(aes(internshipPaid, n))
 paidcol
-
-
 ```
-####Analysis
 
 ```{r}
 kk <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% select(salaryBracket, internshipPaid) %>% count(salaryBracket, internshipPaid)%>% mutate(percentage = round(n/2600, digits = 3))
-
 ```
 From the dataset we found out that `r sum(kk$n)` get a job right after graduation. The distribution based on the salary bracket is :
 
--`r kk[1,3]` graduates with unpaid internships, and `r kk[2,3]` graduates with paid internships got high starting salaries.
-
--`r kk[5,3]` graduates with unpaid internship, and `r kk[6,3]` graduates with paid internship got medium starting salaries.
-
--`r kk[3,3]` graduates with unpaid internship, and `r kk[4,3]` graduates with paid internship got low starting salaries.
+* `r kk[1,3]` graduates with unpaid internships, and `r kk[2,3]` graduates with paid internships got high starting salaries.
+* `r kk[5,3]` graduates with unpaid internship, and `r kk[6,3]` graduates with paid internship got medium starting salaries.
+* `r kk[3,3]` graduates with unpaid internship, and `r kk[4,3]` graduates with paid internship got low starting salaries.
 
 ```{r}
 paidbar <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% 
-  ggplot() + geom_bar(aes(x = salaryBracket, fill = internshipPaid), position = "dodge")
+  ggplot() + geom_bar(aes(x = internshipPaid, fill = salaryBracket), position = "dodge") + scale_fill_discrete(guide_legend(title = "Salary Bracket")) 
 paidbar
 ```
 Based on data and graph above we can coclude that paid internship have highly positive correlation on starting salary with the highest percentage of `r kk[2,4]` for high starting salary, and second highest of `r kk[6,4]` for medium starting salary.  
@@ -102,7 +85,3 @@ Of the `r nrow(kaggle)` majors listed in the WSJ dataset, only `r nrow(kaggle) -
 ```{r}
 salaryPlot
 ```
-```{r}
-
-```
-
