--- a/newInterntoEmployee.Rmd
+++ b/newInterntoEmployee.Rmd
@@ -1,21 +1,14 @@
-<<<<<<< HEAD
 ---
 title: "internToEmployee"
 author: "Thompson"
 date: "April 20, 2018"
-output: html_document
-editor_options: 
-  chunk_output_type: console
+output: pdf_document
 ---
+
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = F, message = F)
 
 library(tidyverse)
-conStudent <- src_mysql(host = "ba-isdsclass-programdev.lsu.edu",
-                        port = 3306,
-                        user = 'student',
-                        password = 'student',
-                        dbname = "isds_3105")
 library(DBI)
 library(lubridate)
 library(scales)
@@ -23,28 +16,35 @@ library(knitr)
 library(ggplot2)
 
 source("conn.R")
-
 ```
 
 ```{r}
-
-graduation <- tbl(conStudent, 'graduation') %>% collect()
+graduation <- tbl(conStudent, 'graduation') %>%
+  filter(degreeLevel == "Bachelor") %>% collect() # Only uses undergrad students
 internship <- tbl(conStudent, 'internship') %>% collect()
 organization <- tbl(conStudent, 'organization') %>% collect()
 currPosition <- tbl(conStudent, 'currentPosition') %>% collect()
-fulltime <- tbl(conStudent, 'fulltime') %>% collect() 
+suppressWarnings(fulltime <- tbl(conStudent, 'fulltime') %>% collect())
 employment <- tbl(conStudent, 'employment') %>% collect()
 
-internGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% count(graduationId, interns) %>% mutate(interns = interns*n) %>% mutate(interns = as.numeric(interns)) %>% select(graduationId, interns) %>% filter(interns != 0, graduationId)
+internGrad <- right_join(internship, graduation, by = 'graduationId') %>%
+  select(graduationId, internshipId) %>%
+  mutate(interns = !is.na(internshipId)) %>% 
+  count(graduationId, interns) %>% 
+  mutate(interns = interns*n) %>% 
+  mutate(interns = as.numeric(interns)) %>% 
+  select(graduationId, interns) %>% 
+  filter(interns != 0, graduationId)
 
-noInternGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId, organizationId) %>%  filter(is.na(internshipId)) 
+noInternGrad <- right_join(internship, graduation, by = 'graduationId') %>%
+  select(graduationId, internshipId, organizationId) %>%  
+  filter(is.na(internshipId))
 #double check - 0's?
-
 
 ```
 
 #Already Added
-Of all of the LSU graduates from 2017, `'r percent(length(internGrad$interns)/length(graduation$graduationId))` had internships while completing their degree.
+Of all of the students graduating from LSU with a Bachelors Degree from 2017, `r percent(length(internGrad$interns)/length(graduation$graduationId))` had internships while completing their degree.
 There was a total of `r sum(internGrad$interns)` internships completed from the class of 2017.
 
 #Internship Turnovers
@@ -53,44 +53,50 @@ There was a total of `r sum(internGrad$interns)` internships completed from the 
 graduationTitle <- tbl(conStudent, 'graduationTitle') %>% collect()
 title <- tbl(conStudent, 'title') %>% collect()
 
-major <- left_join(graduationTitle, title, by = "idTitle") %>% select(graduationId, majorName, titleCode)
+major <- left_join(graduationTitle, title, by = "idTitle") %>% 
+  select(graduationId, majorName, titleCode)
 
-internCurrent <- inner_join(internship, currPosition, by = c('graduationId')) %>% mutate(organizationId = as.numeric(organizationId.y)) %>% mutate(intOrganizationId = as.numeric(organizationId.x)) %>% select(internshipId, academicCredit, graduationId, intOrganizationId, organizationId, idCurrentPosition, positionType)
+internCurrent <- inner_join(internship, currPosition, by = 'graduationId') %>%
+  mutate(organizationId = as.numeric(organizationId.y)) %>% 
+  mutate(intOrganizationId = as.numeric(organizationId.x)) %>% 
+  left_join(graduation, by = 'graduationId') %>%
+  select(internshipId, academicCredit, graduationId, intOrganizationId, organizationId, idCurrentPosition, positionType)
 
 byMajor <- left_join(internCurrent, major, by = 'graduationId')
 
-organizName <- left_join(organization, internCurrent, by = c('organizationId')) %>% select(organizationId, intOrganizationId, organizationName, graduationId, idCurrentPosition)
+organizName <- left_join(organization, internCurrent, by = 'organizationId') %>%
+  select(organizationId, intOrganizationId, organizationName, graduationId, idCurrentPosition)
 
-  
-stayed <- organizName %>% filter(organizationId == intOrganizationId) %>% distinct(graduationId, .keep_all = TRUE)
+stayed <- organizName %>% filter(organizationId == intOrganizationId) %>%
+  distinct(graduationId, .keep_all = TRUE)
 
-ftstay <- left_join(stayed, fulltime, by = "idCurrentPosition") %>% select(organizationId:salary) %>% distinct(salary) 
+ftstay <- left_join(stayed, fulltime, by = "idCurrentPosition") %>%
+  select(organizationId:salary) %>% distinct(salary) 
 
-#code with errors....
-length(orgIdStay$organizationId)/length(noInternGrad$graduationId)
-noInt <- length(graduation$graduationId) - length(orgIdStay$organizationId) # the length for noIntern and this difference should equal up - they are about 4000 apart
+## Errors fixed. You were using an object (ordIdStay) that didn't exist
+## I replaced it with "stayed"
+#  length(stayed$organizationId)/length(noInternGrad$graduationId)
+# Not sure what you wanted to do with this, but right now it's just a random output
 
-noIntSalTotal <- sum(fulltime$salary, na.rm = TRUE) - sum(ftOI, na.rm = TRUE) 
-noIntSalTotal/length(noInternGrad$graduationId) #doesn't seem right - need to double check
+noInt <- length(graduation$graduationId) - length(stayed$organizationId)
+# the length for noInternGrad$graduationId and this difference should equal up
+# they are about 4000 apart
+
+#noIntSalTotal <- sum(fulltime$salary, na.rm = TRUE) - sum(ftOI, na.rm = TRUE) 
+#noIntSalTotal/length(noInternGrad$graduationId) 
+## "ftOI" doesn't exist, I'm not sure what you were trying to use here
 
 #nIntFT <- left_join(noInternGrad, employment, by = "organizationId") = was trying to see the employment total of those without internships but without the values to match, idk if it'll work
 
 ```
 
-Of those who interned for a company, `r length(orgIdStay$organizationId)` graduates continued to work with that same company upon graduation, which is `r  percent(length(orgIdStay$organizationId)/length(fulltime$idCurrentPosition))` of those hired full time.
+Of those who interned for a company, `r length(stayed$organizationId)` graduates continued to work with that same company upon graduation, which is `r  percent(length(stayed$organizationId)/length(fulltime$idCurrentPosition))` of those hired full time.
 
-As a whole, these graduates who continued to work with their internship company make a starting average salary of about `r dollar(sum(ftOI, na.rm = TRUE)/length(ftOI$salary))`.
+As a whole, these graduates who continued to work with their internship company make a starting average salary of about `r # dollar(sum(ftOI, na.rm = TRUE)/length(ftOI$salary))`.
 
-The overall full-time average is `r dollar(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary))`, so those who had an internship and marked down their salary made `r percent((sum(ftOI, na.rm = TRUE)/length(ftOI$salary))/(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary)))` the starting salary than the accumulated full-time average across all graduates.
+The overall full-time average is `r dollar(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary))`, so those who had an internship and marked down their salary made `r # percent((sum(ftOI, na.rm = TRUE)/length(ftOI$salary))/(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary)))` the starting salary than the accumulated full-time average across all graduates.
 
 There were `r length(noInternGrad$graduationId)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship. 
-
-```{r}
-
-
-
-```
-
 
 #Extra 
 
@@ -103,10 +109,6 @@ byMajor %>% filter(positionType == 'Continuing education' & positionType == 'Emp
   ggplot() +
   geom_bar(aes(x = positionType)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
-  
-  
-
-
 
 ```
 
@@ -138,172 +140,3 @@ Left to Do...
 - Final Breakdown of each segment
 - Compare Paid to UnPaid (join dts) - admir/inchan 
 - (if possible) try to break down by major 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-=======
----
-title: "internToEmployee"
-author: "Thompson"
-date: "April 20, 2018"
-output: html_document
-editor_options: 
-  chunk_output_type: console
----
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-
-library(tidyverse)
-library(DBI)
-library(lubridate)
-library(scales)
-library(knitr)
-
-source("conn.R")
-
-```
-
-```{r}
-
-graduation <- tbl(conStudent, 'graduation') %>% collect()
-internship <- tbl(conStudent, 'internship') %>% collect()
-organization <- tbl(conStudent, 'organization') %>% collect()
-currPosition <- tbl(conStudent, 'currentPosition') %>% collect()
-fulltime <- tbl(conStudent, 'fulltime') %>% collect() 
-employment <- tbl(conStudent, 'employment') %>% collect()
-
-internGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% count(graduationId, interns) %>% mutate(interns = interns*n) %>% mutate(interns = as.numeric(interns)) %>% select(graduationId, interns) %>% filter(interns != 0, graduationId)
-
-noInternGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId, organizationId) %>%  filter(is.na(internshipId)) 
-#double check - 0's?
-
-percentInterned <- percent(length(internGrad$interns)/length(graduation$graduationId))
-numInternships <- sum(internGrad$interns)  
-
-
-
-```
-
-#Introduction
-
-Of all of the LSU graduates from 2017, `'r percentInterned` had internships while completing their degree.
-
-There was a total of `r sum(internGrad$interns)` internships completed from the class of 2017.
-
-We analyzed various factors of the graduated students who had completed internships in relation to their starting salary bracket. Then, we compared LSU's data to the national average starting salary for the available majors.  
-
-#Internship Turnovers
-
-```{r}
-
-#MAKE GRAPHS, WRITE SUMMARIES
-
-
-internCurrent <- inner_join(internship, currPosition, by = c('graduationId')) %>% mutate(organizationId = as.numeric(organizationId.y)) %>% mutate(intOrganizationId = as.numeric(organizationId.x)) %>% select(internshipId, academicCredit, graduationId, intOrganizationId, organizationId, idCurrentPosition, positionType)
-
-organizName <- left_join(organization, internCurrent, by = c('organizationId')) %>% select(organizationId, intOrganizationId, organizationName, graduationId, idCurrentPosition)
-  
-orgIdStay <- organizName %>% filter(organizationId == intOrganizationId) %>% distinct(graduationId, .keep_all = TRUE)
-
-ftOI <- left_join(orgIdStay, fulltime, by = "idCurrentPosition") %>% select(organizationId:salary) %>% distinct(salary) 
-
-length(orgIdStay$organizationId)/length(noInternGrad$graduationId)
-noInt <- length(graduation$graduationId) - length(orgIdStay$organizationId) # the length for noIntern and this difference should equal up - they are about 4000 apart
-
-noIntSalTotal <- sum(fulltime$salary, na.rm = TRUE) - sum(ftOI, na.rm = TRUE) 
-noIntSalTotal/length(noInternGrad$graduationId) #doesn't seem right - need to double check
-
-#nIntFT <- left_join(noInternGrad, employment, by = "organizationId") = was trying to see the employment total of those without internships but without the values to match, idk if it'll work
-
-
-```
-
-Of those who interned for a company, `r length(orgIdStay$organizationId)` graduates continued to work with that same company upon graduation, which is `r  percent(length(orgIdStay$organizationId)/length(fulltime$idCurrentPosition))` of those hired full time.
-
-As a whole, these graduates make on average about `r dollar(sum(ftOI, na.rm = TRUE)/length(ftOI$salary))` as the starting average.
-
-The overall full-time average is `r dollar(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary))`, so those who have an internship made `r percent((sum(ftOI, na.rm = TRUE)/length(ftOI$salary))/(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary)))` higher starting salaries than the accumulated full-time average across all graduates.
-
-There were `r length(noInternGrad$graduationId)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship. 
-
-
-
-
-```{r}
-
-
-```
-
-
-
-
-```{r}
-
-#old but keep until finished my part
-
-xx<- internship %>% 
-  left_join(organization) %>%  #fiter to get graduation id - filter to a variable to say yes or no, 
-  group_by(organizationId) %>% 
-  filter(!is.na(organizationId)) %>% collect() #to drop the NA, use filter with a negate operator
-
-#Ideas to consider
-      # 2. if the student had internship --> diff company? (total/internship total) expected med-high
-      # 3. if the student did not get hired --> no current position (total/internship total) expected low
-
-
-```
-
-
-Left to Do...
-- Make Plots 
-- Write Graph Summaires
-- Add conten to group RMD
-- Compare Data to Isabella's boxplots
-   -- The Data on If they stayed 
-- Final Breakdown of each segment
-- Compare Paid to UnPaid (join dts) - admir/inchan 
-- (if possible) try to break down by major 
-
-
-Regarding employed LSU graduates, how do prior intern positions affect salaries?
-* Is the probability of an employed alumnus being in a higher income bracket affected by...
- + having a previous internship? (if yes, then....)
- + the compensation (paid or unpaid) of the internship they had? 
- + if the graduate stayed with that company?
- 
- - Respondents to Analyze: 
-   > Overall for LSU graduates 
-   > Breakdown by major 
-    - https://www.kaggle.com/wsj/college-salaries/data  
-    (Comparison: Dataset from Wall Street Journal of salary by major, college type, and region.)   
- - Trends to Consider:
-  - The graduate's Home State (Louisiana or out of state)
-  - Internship Location
-  
-Conclusion: Analysis Report
-
-
-
-
-
-
-
-
-
-
-
-
-
-
->>>>>>> 80c3440624d61863d0ced106b23b3a1a358ed35d
