--- a/newInterntoEmployee.Rmd
+++ b/newInterntoEmployee.Rmd
@@ -1,14 +1,14 @@
----
-title: "internToEmployee"
-author: "Thompson"
-date: "April 20, 2018"
-output: pdf_document
----
 
+---
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = F, message = F)
+knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
+conStudent <- src_mysql(host = "ba-isdsclass-programdev.lsu.edu",
+                        port = 3306,
+                        user = 'student',
+                        password = 'student',
+                        dbname = "isds_3105")
 library(DBI)
 library(lubridate)
 library(scales)
@@ -16,35 +16,34 @@ library(knitr)
 library(ggplot2)
 
 source("conn.R")
+
 ```
 
 ```{r}
-graduation <- tbl(conStudent, 'graduation') %>%
-  filter(degreeLevel == "Bachelor") %>% collect() # Only uses undergrad students
+
+graduation <- tbl(conStudent, 'graduation') %>% collect()
 internship <- tbl(conStudent, 'internship') %>% collect()
 organization <- tbl(conStudent, 'organization') %>% collect()
 currPosition <- tbl(conStudent, 'currentPosition') %>% collect()
-suppressWarnings(fulltime <- tbl(conStudent, 'fulltime') %>% collect())
+fulltime <- tbl(conStudent, 'fulltime') %>% collect() 
 employment <- tbl(conStudent, 'employment') %>% collect()
 
-internGrad <- right_join(internship, graduation, by = 'graduationId') %>%
-  select(graduationId, internshipId) %>%
-  mutate(interns = !is.na(internshipId)) %>% 
-  count(graduationId, interns) %>% 
-  mutate(interns = interns*n) %>% 
-  mutate(interns = as.numeric(interns)) %>% 
-  select(graduationId, interns) %>% 
-  filter(interns != 0, graduationId)
+#n: shows students who had internships and the number they had
+internGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId, idCollege) %>% mutate(interns = !is.na(internshipId)) %>% count(graduationId, interns, idCollege) %>% mutate(interns = interns*n) %>% mutate(interns = as.numeric(interns)) %>% select(graduationId, interns, idCollege) %>% filter(interns != 0, graduationId)
 
-noInternGrad <- right_join(internship, graduation, by = 'graduationId') %>%
-  select(graduationId, internshipId, organizationId) %>%  
-  filter(is.na(internshipId))
-#double check - 0's?
+#q: is there a way to get it to show by college in 1 graph with counting 1,2,3,4 for each?
+internGrad %>% group_by(interns) %>% summarise(nc = n()) %>% 
+  ggplot() +
+  geom_col(aes(x = interns, y = nc), fill = 'purple') +
+  ggtitle("Graduate Internships", "Number Completed in Individual College Career")
+#adjust axis titles, fix coloring, figure out other cool things to add
+
+
 
 ```
 
 #Already Added
-Of all of the students graduating from LSU with a Bachelors Degree from 2017, `r percent(length(internGrad$interns)/length(graduation$graduationId))` had internships while completing their degree.
+Of all of the LSU graduates from 2017, `'r percent(length(internGrad$interns)/length(graduation$graduationId))` had internships while completing their degree.
 There was a total of `r sum(internGrad$interns)` internships completed from the class of 2017.
 
 #Internship Turnovers
@@ -53,65 +52,81 @@ There was a total of `r sum(internGrad$interns)` internships completed from the 
 graduationTitle <- tbl(conStudent, 'graduationTitle') %>% collect()
 title <- tbl(conStudent, 'title') %>% collect()
 
-major <- left_join(graduationTitle, title, by = "idTitle") %>% 
-  select(graduationId, majorName, titleCode)
+#this is shows the major for each graduationId
+major <- left_join(graduationTitle, title, by = "idTitle") %>% select(graduationId, majorName, titleCode)
+#this allows the comparison of organizationIds to see who stayed with their company
+internCurrent <- inner_join(internship, currPosition, by = c('graduationId')) %>% mutate(organizationId = as.numeric(organizationId.y)) %>% mutate(intOrganizationId = as.numeric(organizationId.x)) %>% select(internshipId, academicCredit, graduationId, intOrganizationId, organizationId, idCurrentPosition, positionType)
 
-internCurrent <- inner_join(internship, currPosition, by = 'graduationId') %>%
-  mutate(organizationId = as.numeric(organizationId.y)) %>% 
-  mutate(intOrganizationId = as.numeric(organizationId.x)) %>% 
-  left_join(graduation, by = 'graduationId') %>%
-  select(internshipId, academicCredit, graduationId, intOrganizationId, organizationId, idCurrentPosition, positionType)
+#those two combined with a column d that shows if they stayed or left
+byMajor <- left_join(internCurrent, major, by = 'graduationId')%>% distinct(graduationId, .keep_all = TRUE) %>% mutate(d = if_else(condition = intOrganizationId == organizationId, true = "Same Company", false = "New Company")) %>% select(graduationId, internshipId, intOrganizationId, organizationId, d, positionType, majorName, titleCode, idCurrentPosition, academicCredit)
 
-byMajor <- left_join(internCurrent, major, by = 'graduationId')
+#q: I think the nas are significant becuase they account for all of those who may be continuing education or are not employed, etc. - is there a way to show those features on this?
+co <- ggplot(byMajor) +
+  geom_bar(aes(x = d)) 
+#n: add colors, titles, etc. 
+co  
 
-organizName <- left_join(organization, internCurrent, by = 'organizationId') %>%
-  select(organizationId, intOrganizationId, organizationName, graduationId, idCurrentPosition)
-
-stayed <- organizName %>% filter(organizationId == intOrganizationId) %>%
-  distinct(graduationId, .keep_all = TRUE)
-
-ftstay <- left_join(stayed, fulltime, by = "idCurrentPosition") %>%
-  select(organizationId:salary) %>% distinct(salary) 
-
-## Errors fixed. You were using an object (ordIdStay) that didn't exist
-## I replaced it with "stayed"
-#  length(stayed$organizationId)/length(noInternGrad$graduationId)
-# Not sure what you wanted to do with this, but right now it's just a random output
-
-noInt <- length(graduation$graduationId) - length(stayed$organizationId)
-# the length for noInternGrad$graduationId and this difference should equal up
-# they are about 4000 apart
-
-#noIntSalTotal <- sum(fulltime$salary, na.rm = TRUE) - sum(ftOI, na.rm = TRUE) 
-#noIntSalTotal/length(noInternGrad$graduationId) 
-## "ftOI" doesn't exist, I'm not sure what you were trying to use here
-
-#nIntFT <- left_join(noInternGrad, employment, by = "organizationId") = was trying to see the employment total of those without internships but without the values to match, idk if it'll work
+#for salary overviews 
+stayed <- byMajor %>% filter(d == 'Same Company') 
+newco <- byMajor %>% filter(d == 'New Company')
+ftstay <- left_join(stayed, fulltime, by = "idCurrentPosition") %>% select(salary) %>% filter(salary > 1)
+ftnew <- left_join(newco, fulltime, by = "idCurrentPosition") %>% select(salary) %>% filter(salary > 6)
+ftTotSalary <- fulltime %>% select(salary) %>% filter(salary > 6) 
 
 ```
 
 Of those who interned for a company, `r length(stayed$organizationId)` graduates continued to work with that same company upon graduation, which is `r  percent(length(stayed$organizationId)/length(fulltime$idCurrentPosition))` of those hired full time.
 
-As a whole, these graduates who continued to work with their internship company make a starting average salary of about `r # dollar(sum(ftOI, na.rm = TRUE)/length(ftOI$salary))`.
+Of those who interned for a company, `r length(newco$organizationId)` graduates started a position at a new company upon graduation, which is `r  percent(length(newco$organizationId)/length(fulltime$idCurrentPosition))` of those hired full time.
 
-The overall full-time average is `r dollar(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary))`, so those who had an internship and marked down their salary made `r # percent((sum(ftOI, na.rm = TRUE)/length(ftOI$salary))/(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary)))` the starting salary than the accumulated full-time average across all graduates.
+With the removal of outliers - Of the `r length(ftTotSalary$salary)` students who submitted their salary for full-time positions, we found that graduates...
+- the `r length(ftstay$salary)` who continued to work for the same internship company made:
+  + in total `r dollar(sum(ftstay))`, which is `r percent(sum(ftstay)/sum(ftTotSalary))` of total full time
+  + on average `r dollar(sum(ftstay)/length(ftstay$salary))`
+- the `r length(ftnew$salary)` who started a position at a new company made:
+  + in total `r dollar(sum(ftnew))`, which is  `r percent(sum(ftnew)/sum(ftTotSalary))` of total full time
+  + on average `r dollar(sum(ftnew)/length(ftnew$salary))`
+ 
+ 
 
-There were `r length(noInternGrad$graduationId)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship. 
+##where I stopped @2pm - come back and finish from here.
+As a whole, these graduates who continued to work with their internship company make a starting average salary of about `r dollar(sum(ftstay, na.rm = TRUE)/length(f$salary))`.
+
+The overall full-time average is `r dollar(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary))`, so those who had an internship and marked down their salary made `r percent((sum(ftOI, na.rm = TRUE)/length(ftOI$salary))/(sum(fulltime$salary, na.rm = TRUE)/length(fulltime$salary)))` the starting salary than the accumulated full-time average across all graduates.
+
+
+```{r}
+
+
+
+```
+
 
 #Extra 
 
 ```{r}
 #trying to get a graph where x = positionType (filtered to certain values), y = count, and fill color in graphs is titleCode for majors
 
-
+#shows students who did not have internships
+noInternGrad <- right_join(internship, graduation, by = c('graduationId', 'graduationId')) %>% select(graduationId, internshipId, organizationId) %>%  filter(is.na(internshipId)) 
+#double check - 0's? come back - maybe try to see if you can just subtract the sum of internGrad$interns from total
 
 byMajor %>% filter(positionType == 'Continuing education' & positionType == 'Employed full-time' & positionType == 'Seeking employment') %>% 
   ggplot() +
   geom_bar(aes(x = positionType)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
+#old no internship code with errors....
+length(orgIdStay$organizationId)/length(noInternGrad$graduationId)
+noInt <- length(graduation$graduationId) - length(orgIdStay$organizationId) # the length for noIntern and this difference should equal up - they are about 4000 apart
+
+noIntSalTotal <- sum(fulltime$salary, na.rm = TRUE) - sum(ftOI, na.rm = TRUE) 
+noIntSalTotal/length(noInternGrad$graduationId) #doesn't seem right - need to double check
+
+#nIntFT <- left_join(noInternGrad, employment, by = "organizationId") = was trying to see the employment total of those without internships but without the values to match, idk if it'll work
 ```
 
+There were `r length(noInternGrad$graduationId)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship. 
 
 
 
@@ -140,3 +155,6 @@ Left to Do...
 - Final Breakdown of each segment
 - Compare Paid to UnPaid (join dts) - admir/inchan 
 - (if possible) try to break down by major 
+
+
+
