--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -17,6 +17,7 @@ library(scales)
 
 source("conn.R")
 source("salaryBrackets.R")
+source("StudentInternships.R")
 
 
 #I'll come back and lessen the narrative before turning in the project, but just so everyone is on the same page for the time being, I want us to keep the explanations until finished.
@@ -54,10 +55,47 @@ Of all of the LSU graduates from 2017, there was a total of `r sum(internGrad$in
 
 [Inchan part for how many studnets completed # of internships]
 
-The total number of students who completed internships were `'r percent(length(internGrad$interns)/length(graduation$graduationId))` of the graduating class.
+The total number of students who completed internships were `r percent(length(internGrad$interns)/length(graduation$graduationId))` of the graduating class.
 
 [inchan put students who didn't]
-There were `r length(noInternGrad$graduationId)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship. 
+There were `r count(noInterns)` students who did not have internships, which is about 13 people without an internship for every 1 with an internship.
+
+```{r}
+right_join(internship, graduation, by = 'graduationId') %>%
+  select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>%
+  count(graduationId, interns) %>% mutate(interns = interns*n) %>% 
+  select(graduationId, interns) %>% collect() -> xxx
+
+right_join(internship, graduation, by = 'graduationId') %>%
+  select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% 
+  count(interns) %>% collect() -> yyy
+yyy$interns <- factor(yyy$interns, levels = c("0","1"), labels = c("No", "Yes"))
+yyy
+
+right_join(internship, graduation, by = 'graduationId') %>%
+  select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>%
+  select(graduationId, interns) %>% filter(interns != T) -> noInterns
+
+yyy %>% 
+  ggplot() +
+  geom_col(aes(x = interns, y = n)) -> yGraph
+
+
+xxx %>% 
+  ggplot() +
+  geom_bar(aes(interns)) -> xGraph
+
+
+xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% 
+  ggplot() +
+  geom_bar(aes(x = interns, fill = salaryBracket), position = "dodge") +
+  ggtitle(label = "Internships")
+
+xxx %>% collect() %>%  inner_join(yy, by = "graduationId") %>% inner_join(majors, by = "graduationId")
+```
+
+
+
 
 
 ###Paid or Unpaid Internships
