--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -96,8 +96,6 @@ xxx %>% collect() %>%  inner_join(yy, by = "graduationId") %>% inner_join(majors
 
 
 
-
-
 ###Paid or Unpaid Internships
 ```{r}
 
@@ -123,7 +121,7 @@ internshipP <- paid %>% collect()
 tn <- oo %>% filter(internshipPaid== "no")
 ty <- oo %>% filter(internshipPaid== "yes")
 ```
-As we have stated previously, of all of the LSU graduates from 2017, `r length(unique(intern1$graduationId))` had internships while completing their degree.  
+As we have stated previously, of all of the LSU graduates from 2017, `r length(unique(intern1$graduationId))` graduates had internships while completing their degree.  
 
 From this number there is a total of `r oo[1,2]` unpaid internships, and `r oo[2,2]` paid internships taken by students that graduated in 2017.  
 
@@ -133,7 +131,7 @@ In this analysis we will find out about the correlation between paid and unpaid 
 paidcol <- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid)) %>% collect() %>% 
   ggplot()+
-  geom_col(aes(internshipPaid, n))
+  geom_col(aes(internshipPaid, n), fill = 'purple')
 paidcol
 
 ##maybe color the columns - we could go with a purple/gold color scheme - pey
